2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	ZFS fixes.

	* grub-core/fs/zfs/zfs.c (fzap_iterate): Fix handling of indexes
	sharing the same block. Iterate over correct number of indices.
	(dnode_get_path): Handle symlinks correctly.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_sblock): Fix offset to volname.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Read label on HFS+.

	* grub-core/fs/hfsplus.c (grub_hfsplus_cmp_catkey_id): New function.
	(grub_hfsplus_btree_search): Fix types.
	(grub_hfsplus_label): Implement.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (grub_ntfs_uuid): Fix a memory leak.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_uuid): Make uppercase to match Linux.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix symlink handling on iso9660.

	* grub-core/fs/iso9660.c (grub_fshelp_node): Remove dir_off. Add symlink
	All users updated.
	(grub_iso9660_susp_iterate): Accept zero-size iterate.
	(grub_iso9660_read_symlink): Moved most of code ...
	(grub_iso9660_iterate_dir): ... here. Fill node->symlink.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsd.c (grub_netbsd_add_boot_disk_and_wedge):
	Use union to avoid breaking strict-aliasing rules.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Support multi-extent iso files.

	* grub-core/fs/iso9660.c (grub_iso9660_data): Remove first_sector.
	Add node.
	(grub_fshelp_node): Revamp. All users updated.
	(FLAG_*): New enum.
	(read_node): New function.
	(grub_iso9660_susp_iterate): Use read_node. Receive a node as argument.
	All users updated.
	(grub_iso9660_mount): Don't attempt to read sua when there is none.
	(get_node_size): New function.
	(grub_iso9660_iterate_dir): Use read_node. Agglomerate multi-extent
	entries.
	Fix memory leak on . and ..
	(grub_iso9660_read): Use read_node.
	(grub_iso9660_close): Free node.
